--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "node scripts/index.js"
+		"users": "node scripts/get-random-users.js",
+		"scrape": "node scripts/scrape.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"big-integer": "1.6.44",
 		"d3": "5.9.7",
 		"instamancer": "1.4.2",
+		"knox": "0.9.2",
+		"mkdirp": "0.5.1",
+		"request": "2.88.0",
 		"rimraf": "2.6.3"
 	}
 }
