--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"users": "node scripts/get-random-users.js",
-		"scrape": "node scripts/scrape.js"
+		"scrape": "node scripts/scrape.js",
+		"sample": "node scripts/sample.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -17,6 +18,7 @@
 		"knox": "0.9.2",
 		"mkdirp": "0.5.1",
 		"request": "2.88.0",
-		"rimraf": "2.6.3"
+		"rimraf": "2.6.3",
+		"shelljs": "0.8.3"
 	}
 }
