--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 	"dependencies": {
 		"big-integer": "1.6.44",
 		"d3": "5.9.7",
+		"franc": "4.1.0",
+		"franc-min": "4.1.0",
 		"instamancer": "1.4.2",
 		"knox": "0.9.2",
 		"mkdirp": "0.5.1",
