--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"big-integer": "1.6.44",
 		"d3": "5.9.7",
+		"emoji-regex": "8.0.0",
 		"franc": "4.1.0",
 		"franc-min": "4.1.0",
 		"instamancer": "1.4.2",
@@ -21,6 +22,7 @@
 		"mkdirp": "0.5.1",
 		"request": "2.88.0",
 		"rimraf": "2.6.3",
-		"shelljs": "0.8.3"
+		"shelljs": "0.8.3",
+		"stringz": "2.0.0"
 	}
 }
